--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -324,11 +324,11 @@ In the interest of boosting performance of RBF-FD beyond 3 GFLOP/sec, work on th
 The ViennaCL library advertises itself as an OpenCL library that provides standard data types for linear algebra operations on GPUs and multi-core CPUs \cite{Rupp2010}. The library, written in C++ templates, abstracts the GPU behind an API for both dense and sparse linear algebra, iterative krylov solvers, matrix preconditioners, etc. Auto-tuned OpenCL kernels simplify targeting the GPU and allow developers to focus on prototyping applications rather than optimizing their own low-level matrix multiply kernels \cite{Rupp2010a}. 
 The API is structured following existing programming and interface conventions from the Boost::uBLAS library, a CPU-only linear algebra library (\cite{BoostSite}). In fact, the ViennaCL and Boost::uBLAS APIs are directly compatible, and many ViennaCL algorithms (e.g., iterative solvers, preconditioners, etc.) can be applied to Boost::uBLAS data structures. Similar interoperability exists between ViennaCL and the EIGEN and MTL libraries. 
 
-In an interesting twist, the most recent version of ViennaCL (v1.4.2) also supports multiple parallel back-ends that allow one to target different parallel architectures with the same API. Supported back-end options include OpenCL, CUDA, and OpenMP. 
+In an interesting twist, the most recent version of ViennaCL (v1.4.2) also supports multiple parallel back-ends that allow one to target different parallel architectures with the same API. Back-end options include OpenCL, CUDA, and OpenMP. 
 
-We have integrated the ViennaCL library into the RBF-FD GPU project (\cite{BolligRBFFDCode}), and attempt to use the API whenever possible. When work started with ViennaCL two things were apparent: a) the library is incredibly powerful but it was limited to square matrices; and b) there was no support multiple GPUs. Since the library is open source, we became developers and made a number of contributions that have since been included in the main codebase to add support for rectangular matrices, a matrix preconditioner, and soon our multi-GPU algorithms with overlapping communication and computation presented in Chapter~\ref{chap:multigpu_rbffd}. 
+We have integrated the ViennaCL library into the RBF-FD GPU project (\cite{BolligRBFFDCode}), and attempt to use the API whenever possible. When work started with ViennaCL two things were apparent: a) the library is incredibly powerful but it was limited to square matrices; and b) there was no support multiple GPUs. Since the library is open source, we joined the project as developers and made a number of contributions to the main codebase that add support for rectangular matrices, a matrix preconditioner, a number of bugfixes, and hopefully soon, our multi-GPU algorithms with overlapping communication and computation presented in Chapter~\ref{chap:multigpu_rbffd}.
 
-As a testament to the functionality of the ViennaCL library and its utility within the RBF-FD GPU project, we observe that the PETSc project (\cite{petsc-web-page}) recently integrated the library into its codebase. PETSc previously leveraged the CUDA-only library named CUSP (\cite{Cusp2012}) to internally target NVidia GPUs \cite{Minden2010}. However, with the help of ViennaCL back-ends and the functional portability of OpenCL, PETSc can now target parallel architectures from any vendor. 
+As a testament to the functionality of the ViennaCL library and its utility within the RBF-FD GPU project, we note that the PETSc project (\cite{petsc-web-page}) recently integrated the library into its codebase. PETSc originally leveraged the CUDA-only library, CUSP (\cite{Cusp2012}), to internally offload matrix computations to NVidia GPUs \cite{Minden2010}. However, with the functional portability of OpenCL and the new ViennaCL back-ends, the PETSc can transparently target parallel architectures across all vendors. 
 
 ViennaCL supports a number of sparse formats similar to \cite{Bell2009,Cusp2012}. Due to the low operational intensity in the SpMV operation, the best way to boost performance is to increase compression on the sparse matrix. To this end we consider the performance of three ViennaCL formats shown in Figure~\ref{fig:sparse_format}: 
 \begin{itemize} 
@@ -348,15 +348,17 @@ Due to our assumption that all RBF-FD stencils will have equal size, the ELL for
 
 
 \subsection{Performance}
-To compare the performance of ViennaCL to our custom GPU kernels, we integrated the library into our RBF-FD implementation (\cite{BolligRBFFDCode}) and benchmarked the performance of the SpMV in a simulated RK4 iteration. In each case, a single RBF-FD differentiation matrix is assembled and then multiplied against four different vectors as evaluation steps. The resulting vectors are then scaled and added together to advance the time-step. We benchmark the time spent in SpMV for the ViennaCL sparse containers (ELL, CSR, COO), and a CPU-only CSR container from the BOOST::uBLAS library. 
+To compare the performance of ViennaCL to our custom GPU kernels, we benchmarked the SpMV in a simulated RK4 iteration. In each case, a single RBF-FD differentiation matrix is assembled and then multiplied against four different vectors as evaluation steps. The resulting vectors are then scaled and added together to advance the time-step. We benchmark the time spent in SpMV for the ViennaCL sparse containers (ELL, CSR, and COO), as well as a CPU-only CSR container from the BOOST::uBLAS library. 
 
-We measure the performance of the SpMV as
+Performance of the SpMV is measured as
 \begin{align}
-GFLOP/sec = ^{N * n * 2} /_{t_{ms}} * 10^{-9},
+GFLOP/sec = (\ ^{N * n * 2} /_{t_{s}} ) * 10^{-9},
 \end{align}
-where $t_{ms}$ is the total SpMV execution time given in milliseconds, and the variables $N$ and $n$ describe the number of rows and nonzeros per row respectively. 
+where $t_{s}$ is the SpMV execution time given in seconds, and the scale of 2 counts the number of FLOPs (a multiply and add) required per nonzero of the matrix. Variables $N$ and $n$ describe the number of rows and nonzeros per row respectively (equivalently the mesh resolution and stencil size).
 
-The actual observed GFLOP/sec achieved on Cascade's M2070 GPUs with the ViennaCL package is shown in Figure~\ref{fig:gflops_cascade_m2070}. Figure~\ref{fig:gflops_cascade_k20} provides achieved GFLOP/sec for Cascade's K20 GPUs.  
+Benchmarks are provided for both the NVidia M2070 and NVidia K20 GPUs on the Cascade cluster. In each case we consider a range of mesh resolutions up to one million nodes on the unit sphere, and stencil sizes $n=17, 31, 50, 101$. Curves for 
+
+We start in Figure~\ref{fig:gflops_cascade_m2070} with the observed GFLOP/sec achieved on the M2070. For each stencil size the ELL format 
 
 \begin{figure} 
 \centering
@@ -390,6 +392,7 @@ The actual observed GFLOP/sec achieved on Cascade's M2070 GPUs with the ViennaCL
 \label{fig:gflops_cascade_m2070}
 \end{figure}
 
+Figure~\ref{fig:gflops_cascade_k20} provides achieved GFLOP/sec for Cascade's K20 GPUs.  
 
 \begin{figure} 
 \centering
