--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,21 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-11-17 16:52:00 -0600 
+%% Created for Evan Bollig at 2013-11-18 10:41:20 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@techreport{IntelXeonPhi2013,
-	Author = {S. U. Thiagarajan AND C. Congdon AND S. Naik AND L. Q. Nguyen},
+@misc{IntelXeonPhi2013,
+	Author = {Intel},
 	Date-Added = {2013-11-17 22:49:04 +0000},
-	Date-Modified = {2013-11-17 22:51:57 +0000},
-	Institution = {Intel Corporation},
-	Number = {1.5},
-	Title = {Intel Xeon Phi Coprocessor -- Developer's Quick Start Guide},
-	Type = {White paper},
+	Date-Modified = {2013-11-18 16:41:20 +0000},
+	Howpublished = {\nolinkurl{http://www.intel.com/content/dam/www/public/us/en/documents/performance-briefs/xeon-phi-product-family-performance-brief.pdf}},
+	Month = {October},
+	Title = {Intel Xeon Phi Product Family -- Performance},
 	Year = {2013}}
 
 @techreport{LiSaad2010,
